# vaultorix

./: CMakeLists.txt  LICENSE  README.md  Readme.md  Vaultorix - Plan.docx  app.rc
.VSCodeCounter/2026-06-20_19-59-47/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
dependencies/qtkeychain/: CMakeLists.txt
resources/: IconManager.cpp  IconManager.h  Icons.h  IllustrationManager.cpp  IllustrationManager.h  Illustrations.h  resources.qrc
src/: main.cpp
src/core/OTPValidator/: OTPValidator.cpp  OTPValidator.h
src/core/account/accountAuthCoordinator/: AccountAuthCoordinator.h
src/core/account/accountCreateManager/: accountCreateManager.h
src/core/account/accountSignInManager/: AccountSignInManager.cpp  AccountSignInManager.h
src/core/account/auth/: AuthCoordinator.cpp  AuthCoordinator.h
src/core/accountAuthCoordinator/: AccountAuthCoordinator.cpp  AccountAuthCoordinator.h
src/core/accountCreate/accountCreationManager/: accountCreationManager.cpp  accountCreationManager.h
src/core/accountCreateManager/: accountCreateManager.cpp  accountCreateManager.h
src/core/accountCreationManager/: accountCreationManager.cpp  accountCreationManager.h
src/core/accountSignInManager/: accountSignInManager.cpp  accountSignInManager.h
src/core/config/: APIConfig.h  Constants.h
src/core/crypto/decryption/: Decryption.cpp  Decryption.h
src/core/crypto/encryption/: Encryption.cpp  Encryption.h
src/core/crypto/key/: KeyManager.cpp  KeyManager.h
src/core/deviceInfo/: deviceInfo.cpp  deviceInfo.h
src/core/emailValidator/: emailValidator.cpp  emailValidator.h
src/core/errors/: DecryptError.h  DeleteError.h  EncryptError.h  ImportError.h  RestoreError.h
src/core/nameValidator/: nameValidator.cpp  nameValidator.h
src/core/pwdValidator/: pwdValidator.cpp  pwdValidator.h
src/core/services/account_settings/: AccountSettingsService.cpp  AccountSettingsService.h
src/core/services/auth/: OTP.cpp  OTP.h  OTPService.cpp  OTPService.h  Signin.cpp  Signin.h  SigninService.cpp  SigninService.h  Signup.cpp  Signup.h  SignupService.cpp  SignupService.h  TokenManager.cpp  TokenManager.h
src/core/services/report_bug/: ReportBug.cpp  ReportBug.h  ReportBugService.cpp  ReportBugService.h
src/core/services/update/: Update.cpp  Update.h  UpdateService.cpp  UpdateService.h
src/core/session/: SessionManager.cpp  SessionManager.h
src/core/theme/: ThemeManager.cpp  ThemeManager.h
src/core/usernameValidator/: usernameValidator.cpp  usernameValidator.h
src/core/utils/: Utils.cpp  Utils.h  ValidatorUtils.cpp
src/core/validators/OTPValidator/: OTPValidator.cpp  OTPValidator.h
src/core/validators/auth/: EmailValidator.cpp  EmailValidator.h  NameValidator.cpp  NameValidator.h  OTPValidator.cpp  OTPValidator.h  PasswordValidator.cpp  PasswordValidator.h  UsernameValidator.cpp  UsernameValidator.h
src/core/validators/emailValidator/: emailValidator.cpp  emailValidator.h
src/core/validators/nameValidator/: nameValidator.cpp  nameValidator.h
src/core/validators/pwdValidator/: pwdValidator.cpp  pwdValidator.h
src/core/validators/usernameValidator/: usernameValidator.cpp  usernameValidator.h
src/core/validators/validatorUtils/: validatorUtils.cpp  validatorUtils.h
src/resources/: IconManager.cpp  IconManager.h  Icons.h  IllustrationManager.cpp  Illustrations.h  resources.qrc
src/resources/otp/: otp.html
src/resources/terms/: termsConds.html
src/ui/account/accountCreate/: AccountCreate.cpp  AccountCreate.h
src/ui/account/accountOTP/: AccountOTP.cpp  AccountOTP.h
src/ui/account/accountSignIn/: AccountSignIn.cpp  AccountSignIn.h
src/ui/account/accountWindow/: AccountWindow.cpp  AccountWindow.h
src/ui/account/pwdRulesWidget/: PwdRulesWidget.cpp  PwdRulesWidget.h
src/ui/accountCreate/: AccountCreate.cpp  AccountCreate.h
src/ui/accountOTP/: AccountOTP.cpp  AccountOTP.h  OTPWidget.cpp  OTPWidget.h
src/ui/accountSignIn/: AccountSignIn.cpp  AccountSignIn.h
src/ui/accountWindow/: AccountWindow.cpp  AccountWindow.h
src/ui/auth/authCoordinator/: AuthCoordinator.cpp  AuthCoordinator.h
src/ui/auth/authWindow/: AuthWindow.cpp  AuthWindow.h
src/ui/auth/auth_coordinator/: AuthCoordinator.cpp  AuthCoordinator.h
src/ui/auth/auth_window/: AuthWindow.cpp  AuthWindow.h
src/ui/auth/otp/: Otp.cpp  Otp.h
src/ui/auth/signin/: Signin.cpp  Signin.h
src/ui/auth/signup/: Signup.cpp  Signup.h
src/ui/components/: Button.cpp  Button.h  ButtonMenu.cpp  ButtonMenu.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Delegate.cpp  Delegate.h  Dialog.cpp  Dialog.h  Label.cpp  Label.h  LineProgress.cpp  LineProgress.h  Menu.cpp  Menu.h  Popup.cpp  Popup.h  Rectangle.cpp  Rectangle.h  RoundedBox.cpp  RoundedBox.h  ScrollBar.cpp  ScrollBar.h  Seperator.cpp  Seperator.h  SmoothOpacity.cpp  SmoothOpacity.h  SmoothShadow.cpp  SmoothShadow.h  SpinnerProgress.cpp  SpinnerProgress.h  Text.cpp  Text.h  TextEdit.cpp  TextEdit.h  TextField.cpp  TextField.h  (+6 more)
src/ui/dialogs/: dialogsUtils.cpp  dialogsUtils.h
src/ui/dialogs/confirm_dialog/: ConfirmDialog.cpp  ConfirmDialog.h
src/ui/dialogs/dialogUtils/: DialogsUtils.cpp  DialogsUtils.h
src/ui/dialogs/error/: Error.cpp  Error.h
src/ui/dialogs/errorDialog/: errorDialog.cpp  errorDialog.h
src/ui/dialogs/error_dialog/: ErrorDialog.cpp  ErrorDialog.h
src/ui/dialogs/termsConditions/: TermsConditions.cpp  TermsConditions.h
src/ui/dialogs/terms_conditions/: TermsConditions.cpp  TermsConditions.h
src/ui/pwdRulesWidget/: pwdRulesWidget.cpp  pwdRulesWidget.h
src/ui/pwdValidator/: pwdValidator.cpp  pwdValidator.h
src/ui/utils/: Utils.cpp  Utils.h
src/ui/vault/about/: About.cpp  About.h
src/ui/vault/accountSettings/: AccountSettings.cpp  AccountSettings.h
src/ui/vault/accountSettingsWindow/: AccountSettingsWindow.cpp  AccountSettingsWindow.h
src/ui/vault/account_settings/: AccountSettings.cpp  AccountSettings.h
src/ui/vault/emptyState/: EmptyState.cpp
src/ui/vault/emptyStateWidget/: EmptyStateWidget.cpp  EmptyStateWidget.h
utils/: tempMails.conf
(+65 files in other folders)
